plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.climeet'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //mailSender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //kakao access token을 가져오기 위한 Oauth 서버와의 통신을 위한 webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //swagger 설정
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //aws - S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //oauth 2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'

    //firebase
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //DB의 JSON 타입을 Domain에서 사용하기 위함
    implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.7.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

processResources.dependsOn('copyGitSubmodule')
tasks.register('copyGitSubmodule', Copy) {
    from './config'
    include '*.yml'
    include '*.p12'
    include 'firebase/*'
    into 'src/main/resources'
}